# ETL_JOB

./: README.md  pyproject.toml  requirements.txt
config/: config.py  config.yaml
data/: page_1.json  page_10.json  page_2.json  page_3.json  page_4.json  page_5.json  page_6.json  page_7.json  page_8.json  page_9.json
log/: job_log
src/: ingestion.py  load.py  transformation.py
tests/: test_ingestion.py  test_transformation.py
utils/: logging.py
