[project]
name = "ETL_JOB"
version = "0.1.0"
dependencies = [
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "dotenv==0.9.9",
    "idna==3.11",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "py4j==0.10.9.9",
    "pyspark==4.1.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "PyYAML==6.0.3",
    "requests==2.33.1",
    "six==1.17.0",
    "tzdata==2026.1",
    "urllib3==2.6.3",
    "SQLAlchemy==2.0.49"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]